Translate tika.adoc.po

--- a/l10n/po/ja_JP/_guides/tika.adoc.po
+++ b/l10n/po/ja_JP/_guides/tika.adoc.po
@@ -3,43 +3,40 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-11 02:12+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-02-12 21:26+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/tika.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Using Apache Tika"
 msgstr "Quarkus - Apache Tikaの使用"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:11
-#, fuzzy
 msgid "This guide explains how your Quarkus application can use https://tika.apache.org/[Apache Tika] to parse the documents."
 msgstr "このガイドでは、Quarkusアプリケーションが link:https://tika.apache.org/[Apache Tika] を使用してドキュメントを解析する方法について説明します。"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:13
-#, fuzzy
 msgid "https://tika.apache.org/[Apache Tika] is a content analysis toolkit which is used to parse the documents in PDF, Open Document, Excel and many other well known binary and text formats using a simple uniform API. Both the document text and properties (metadata) are available once the document has been parsed."
-msgstr "link:https://tika.apache.org/[Apache Tika は] コンテンツ分析ツールキットで、シンプルな統一 API を使って PDF, Open Document, Excel やその他多くのよく知られたバイナリやテキスト形式の文書を解析するのに使われます。文書のテキストとプロパティ (メタデータ) の両方が、文書が解析されると利用可能になります。"
+msgstr "link:https://tika.apache.org/[Apache Tika] はコンテンツ分析ツールキットで、シンプルな統一 API を使って PDF, Open Document, Excel やその他多くのよく知られたバイナリやテキスト形式の文書を解析するのに使われます。文書のテキストとプロパティ (メタデータ) の両方が、文書が解析されると利用可能になります。"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:17
-#, fuzzy
 msgid "If you are planning to run the application as a native executable and parse documents that may have been created with charsets different than the standard ones supported in Java such as `UTF-8` then you should configure Quarkus Maven Plugin to get the native image generator include all the charsets available to the JVM:"
 msgstr "アプリケーションをネイティブ実行ファイルとして実行し、 `UTF-8` のようなJavaでサポートされている標準の文字セットとは異なる文字セットで作成された可能性のあるドキュメントを解析する場合は、Quarkus Maven Pluginを設定して、ネイティブイメージジェネレータがJVMで利用可能なすべての文字セットを含むようにする必要があります。"
 
@@ -78,7 +75,6 @@ msgstr "このガイドを完成させるには、以下が必要です："
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:44
-#, fuzzy
 msgid "less than 20 minutes"
 msgstr "二十分弱"
 
@@ -99,21 +95,19 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:48
-#, fuzzy
 msgid "Docker"
-msgstr "ドッカー"
+msgstr "Docker"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:49
-#, fuzzy
 msgid "link:building-native-image[GraalVM installed if you want to run in native mode]"
-msgstr "link:building-native-image[ネイティブモードで動作させたい場合は、GraalVMをインストールしてください。]"
+msgstr "link:building-native-image[ネイティブモードで動作させたい場合は、GraalVMがインストールされていること]"
 
 #. type: Title ==
 #: upstream/_guides/tika.adoc:50
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:54
@@ -127,19 +121,17 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:58
-#, fuzzy
 msgid "The solution is located in the `tika-quickstart` {quickstarts-tree-url}/tika-quickstart[directory]."
 msgstr "ソリューションは `tika-quickstart` {quickstarts-tree-url}/tika-quickstart[directory] にあります。"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:62
-#, fuzzy
 msgid "The provided solution contains a few additional elements such as tests and testing infrastructure."
 msgstr "提供されるソリューションには、テストやテストのインフラストラクチャなど、いくつかの追加要素が含まれています。"
 
 #. type: Title ==
 #: upstream/_guides/tika.adoc:65
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the Maven Project"
 msgstr "Mavenプロジェクトの作成"
 
@@ -163,13 +155,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:81
-#, fuzzy
 msgid "This command generates a Maven project, importing the `tika` and `resteasy` extensions."
-msgstr "このコマンドは、 `tika` と `resteasy` の拡張子をインポートして、Maven プロジェクトを生成します。"
+msgstr "このコマンドは、 `tika` と `resteasy` のエクステンションをインポートして、Maven プロジェクトを生成します。"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:84
-#, fuzzy
 msgid "If you already have your Quarkus project configured you can add the `tika` and `resteasy` extensions to your project by running the following command in your project base directory."
 msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリで次のコマンドを実行することで、 `tika` と `resteasy` の拡張子をプロジェクトに追加できます。"
 
@@ -200,15 +190,14 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/tika.adoc:104
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Examine the generated JAX-RS resource"
 msgstr "生成されたJAX-RSリソースを調べる"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:107
-#, fuzzy
 msgid "Open the `src/main/java/org/acme/tika/TikaParserResource.java` file and see the following content:"
-msgstr "`src/main/java/org/acme/tika/TikaParserResource.java` ファイルを開くと、以下のような内容が表示されます。"
+msgstr "`src/main/java/org/acme/tika/TikaParserResource.java` ファイルを開くと、以下のような内容が表示されます："
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:111 upstream/_guides/tika.adoc:135
@@ -248,13 +237,12 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/tika.adoc:128
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Update the JAX-RS resource"
 msgstr "JAX-RSリソースの更新"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:131
-#, fuzzy
 msgid "Next update `TikaParserResource` to accept and parse PDF and OpenDocument format documents:"
 msgstr "次に `TikaParserResource` を更新して、PDF および OpenDocument 形式の文書を受け入れて解析するようにします。"
 
@@ -345,7 +333,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:176
-#, fuzzy
 msgid "As you can see the JAX-RS resource method was renamed to `extractText`, `@GET` annotation was replaced with `POST` and `@Path(/text)` annotation was added, and `@Consumes` annotation shows that PDF and OpenDocument media type formats can now be accepted. An injected `TikaParser` is used to parse the documents and report the extracted text. It also measures how long does it take to parse a given document."
 msgstr "ご覧のように、JAX-RSのリソースメソッドの名前が `extractText` に変更され、 `@GET` アノテーションが `POST` に置き換わり、 `@Path(/text)` アノテーションが追加され、 `@Consumes` アノテーションでは、PDF と OpenDocument のメディアタイプのフォーマットが受け入れられるようになったことが示されています。注入された `TikaParser` は、文書を解析し、抽出されたテキストを報告するために使用されます。また、与えられた文書を解析するのにどのくらいの時間がかかるかを測定します。"
 
@@ -357,9 +344,8 @@ msgstr "アプリケーションの実行"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:180
-#, fuzzy
 msgid "Now we are ready to run our application. Use:"
-msgstr "これで、アプリケーションを実行する準備が整いました。使用してください。"
+msgstr "これで、アプリケーションを実行する準備が整いました。以下を使用して下さい："
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:184
@@ -369,13 +355,12 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:187
-#, fuzzy
 msgid "and you should see output similar to:"
-msgstr "のような出力が表示されるはずです。"
+msgstr "次のような出力が得られるはずです："
 
 #. type: Block title
 #: upstream/_guides/tika.adoc:188
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "quarkus:dev Output"
 msgstr "quarkus:dev 出力"
 
@@ -402,7 +387,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:209
-#, fuzzy
 msgid "Now that the REST endpoint is running, we can get it to parse PDF and OpenDocument documents using a command line tool like curl:"
 msgstr "REST エンドポイントが実行されているので、curl のようなコマンドラインツールを使用して PDF や OpenDocument ドキュメントを解析することができます。"
 
@@ -416,7 +400,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:217
-#, fuzzy
 msgid "and"
 msgstr "そして"
 
@@ -436,7 +419,6 @@ msgstr "ネイティブ実行可能ファイルの構築"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:228
-#, fuzzy
 msgid "You can build a native executable with the usual command `./mvnw package -Pnative`.  Running it is as simple as executing `./target/tika-quickstart-1.0.0-SNAPSHOT-runner`."
 msgstr "通常のコマンド `./mvnw package -Pnative` でネイティブの実行ファイルをビルドできます。実行は `./target/tika-quickstart-1.0-SNAPSHOT-runner` を実行するだけで簡単です。"
 
