Apply translation memory

--- a/l10n/po/ja_JP/_guides/deploying-to-openshift.adoc.po
+++ b/l10n/po/ja_JP/_guides/deploying-to-openshift.adoc.po
@@ -247,7 +247,7 @@ msgstr "画像の構築に使用する拡張子を選択します。"
 #: upstream/_guides/deploying-to-openshift.adoc:107
 #, no-wrap
 msgid "quarkus.container-image.builder=docker\n"
-msgstr ""
+msgstr "quarkus.container-image.builder=docker\n"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-openshift.adoc:110
