--- a/l10n/po/ja_JP/_posts/2021-02-11-quarkus-1-11-3-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-02-11-quarkus-1-11-3-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-11 21:08+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-02-14 22:58+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-11-quarkus-1-11-3-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-11-quarkus-1-11-3-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.11.3.Final released - Bugfixes'\n"
@@ -38,19 +38,17 @@ msgstr ""
 "title: Quarkus 1.11.3.Finalリリース - バグフィックス\n"
 "date: 2021-02-11\n"
 "tags: release\n"
-"synopsis: 1.11.3.Finalでは、ネイティブ実行ファイルでRESTEasyと組み合わせてOpenTracingを使用した場合のリグレッションを主に修正しました。\n"
+"synopsis: 1.11.3.Finalでは、ネイティブ実行可能ファイルでRESTEasyと組み合わせてOpenTracingを使用した場合のリグレッションを主に修正しました。\n"
 "author: gsmet\n"
 "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-11-quarkus-1-11-3-final-released.adoc:11
-#, fuzzy
 msgid "1.11.3.Final mainly fixes a regression introduced in 1.11.2.Final that makes it impossible to build native executables while using both the RESTEasy and OpenTracing extensions."
-msgstr "1.11.3.Finalは主に1.11.2.Finalで導入された、RESTEasyとOpenTracingの両方の拡張機能を使用している場合にネイティブの実行ファイルをビルドできないようにするリグレッションを修正しています。"
+msgstr "1.11.3.Finalは主に1.11.2.Finalで導入された、RESTEasyとOpenTracingの両方のエクステンションを使用している場合にネイティブの実行ファイルをビルドできないようにするリグレッションを修正しています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-11-quarkus-1-11-3-final-released.adoc:13
-#, fuzzy
 msgid "It is a safe upgrade for everyone using Quarkus 1.11."
 msgstr "これは、Quarkus 1.11を使用しているすべての人にとって安全なアップグレードです。"
 
@@ -61,9 +59,8 @@ msgstr "まだ1.11を使用していない場合は、 link:https://github.com/q
 
 #. type: Plain text
 #: upstream/_posts/2021-02-11-quarkus-1-11-3-final-released.adoc:17
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.11.3.Final[the full changelog of 1.11.3.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.11.3.Final[1.11.3.Finalの完全な変更履歴はGitHubで]入手できます。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.11.3.Final[GitHubで1.11.3.Finalの完全な変更履歴]を入手できます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-02-11-quarkus-1-11-3-final-released.adoc:18
