--- a/l10n/po/ja_JP/_posts/2021-02-10-resteasy-reactive-faq.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-02-10-resteasy-reactive-faq.adoc.po
@@ -35,7 +35,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 悩み事無しにに大幅なパフォーマンス向上\n"
+"title: 悩み事無しに大幅なパフォーマンス向上\n"
 "date: 2021-02-10\n"
 "tags: reactive web rest resteasy\n"
 "synopsis: RESTEasy Reactive FAQ\n"
