--- a/l10n/po/ja_JP/_guides/flyway.adoc.po
+++ b/l10n/po/ja_JP/_guides/flyway.adoc.po
@@ -7,12 +7,12 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:07+0900\n"
-"PO-Revision-Date: 2021-02-07 21:26+0900\n"
+"PO-Revision-Date: 2021-02-15 15:10+0900\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: \n"
+"Last-Translator: Hiroshi Yamanaka <hyamanak@redhat.com>\n"
 "Language-Team: \n"
 "X-Generator: Poedit 2.4.2\n"
 
@@ -23,7 +23,7 @@ msgstr ""
 #: upstream/_guides/flyway.adoc:6
 #, no-wrap
 msgid "Quarkus - Using Flyway"
-msgstr "Quarkus - Flywayの使用"
+msgstr "Quarkus - Flyway の使用"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:13
@@ -49,7 +49,7 @@ msgstr "プロジェクトでFlywayを使い始めるには、以下のことを
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:21
 msgid "add your migrations to the `{migrations-path}` folder as you usually do with Flyway"
-msgstr "Flywayで通常行うように、マイグレーションを `{migrations-path}` フォルダに追加します。"
+msgstr "Flyway で通常行うように、マイグレーションを `{migrations-path}` フォルダに追加します。"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:23
@@ -64,7 +64,7 @@ msgstr "`pom.xml` で、以下の依存関係を追加します："
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:27
 msgid "the Flyway extension"
-msgstr "Flywayエクステンション"
+msgstr "Flyway エクステンション"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:28
@@ -98,12 +98,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:51
 msgid "Flyway support relies on the Quarkus datasource config.  It can be customized for the default datasource as well as for every <<multiple-datasources,named datasource>>.  First, you need to add the datasource config to the `{config-file}` file in order to allow Flyway to manage the schema.  Also, you can customize the Flyway behaviour by using the following properties:"
-msgstr "Flywayのサポートは、Quarkusのデータソース設定に依存しています。この設定は、デフォルトのデータソースだけでなく、 すべての link:#multiple-datasources[名前の付いたデータソース] に対してカスタマイズすることができます。まず、Flywayがスキーマを管理できるようにするために、データソース設定を `{config-file}` ファイルに追加する必要があります。また、以下のプロパティを使用して、Flywayの動作をカスタマイズすることができます。"
+msgstr "Flyway のサポートは、Quarkus のデータソース設定に依存しています。この設定は、デフォルトのデータソースだけでなく、 すべての link:#multiple-datasources[名前の付いたデータソース] に対してカスタマイズすることができます。まず、Flyway によるスキーマ管理を可能にするために、データソース設定を `{config-file}` ファイルに追加する必要があります。また、以下のプロパティを使用して、Flyway の動作をカスタマイズすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:56
 msgid "The following is an example for the `{config-file}` file:"
-msgstr "`{config-file}` ファイルの例は以下の通りです："
+msgstr "`{config-file}` ファイルの例は以下の通りです。"
 
 #. type: delimited block -
 #: upstream/_guides/flyway.adoc:64
@@ -143,7 +143,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:81
 msgid "Add a SQL migration to the default folder following the Flyway naming conventions: `{migrations-path}/V1.0.0__Quarkus.sql`"
-msgstr "`{migrations-path}/V1.0.0__Quarkus.sql` のようにFlywayの命名規則に従って、デフォルトフォルダーにSQLマイグレーションを追加します。 "
+msgstr "`{migrations-path}/V1.0.0__Quarkus.sql` のように Flyway の命名規則に従って、デフォルトフォルダーに SQL マイグレーションを追加します。 "
 
 #. type: delimited block -
 #: upstream/_guides/flyway.adoc:91
@@ -161,7 +161,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:94
 msgid "Now you can start your application and Quarkus will run the Flyway's migrate method according to your config:"
-msgstr "これでアプリケーションを起動することができ、Quarkusは設定に従ってFlywayのマイグレーションメソッドを実行します。"
+msgstr "これでアプリケーションを起動でき、Quarkus は設定に従って Flyway のマイグレーションメソッドを実行します。"
 
 #. type: delimited block -
 #: upstream/_guides/flyway.adoc:102 upstream/_guides/flyway.adoc:169
@@ -188,7 +188,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:111 upstream/_guides/flyway.adoc:189
 msgid "Inject the Flyway object if you want to use it directly"
-msgstr "Flywayオブジェクトを直接使用したい場合はインジェクトします。"
+msgstr "Flyway オブジェクトを直接使用する場合はインジェクトします。"
 
 #. type: Title ==
 #: upstream/_guides/flyway.adoc:112
@@ -199,7 +199,7 @@ msgstr "複数のデータソース"
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:116
 msgid "Flyway can be configured for multiple datasources.  The Flyway properties are prefixed exactly the same way as the named datasources, for example:"
-msgstr "Flyway は、複数のデータソースに対して設定することができます。Flyway のプロパティは、例えば、名前の付いたデータソースと全く同じように接頭辞が付けられます。"
+msgstr "Flyway は、複数のデータソースに対して設定可能です。Flyway のプロパティーには、例えば、名前の付いたデータソースと全く同じように接頭辞が付けられます。"
 
 #. type: delimited block -
 #: upstream/_guides/flyway.adoc:123
@@ -264,28 +264,28 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:152
 msgid "Notice there's an extra bit in the key.  The syntax is as follows: `quarkus.flyway.[optional name.][datasource property]`."
-msgstr "キーに余分なビットがあることに注意してください。構文はこのの通りです： `quarkus.flyway.[optional name.][datasource property]` ."
+msgstr "キーに余分なビットがあることに注意してください。構文は次の通りです。`quarkus.flyway.[optional name.][datasource property]` "
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:154
 msgid "Without configuration, Flyway is set up for every datasource using the default settings."
-msgstr "設定なしの場合は、Flywayはデフォルト設定を使用して各データソースに対して設定されます。"
+msgstr "設定なしの場合、Flyway はデフォルト設定を使用して各データソースに対して設定されます。"
 
 #. type: Title ==
 #: upstream/_guides/flyway.adoc:155
 #, no-wrap
 msgid "Using the Flyway object"
-msgstr "Flywayオブジェクトの使用"
+msgstr "Flyway オブジェクトの使用"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:158
 msgid "In case you are interested in using the `Flyway` object directly, you can inject it as follows:"
-msgstr "`Flyway` オブジェクトを直接使いたい場合は、以下のように注入出来ます："
+msgstr "`Flyway` オブジェクトを直接使いたい場合は、以下のように注入できます。"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:161
 msgid "If you enabled the `quarkus.flyway.migrate-at-start` property, by the time you use the Flyway instance, Quarkus will already have run the migrate operation"
-msgstr "`quarkus.flyway.migrate-at-start` プロパティを有効にした場合、Flywayインスタンスを使用する時点で、Quarkusはすでにマイグレーション操作を実行しています。"
+msgstr "`quarkus.flyway.migrate-at-start` プロパティーを有効にした場合、Flyway インスタンスを使用する時点で、Quarkus はすでにマイグレーション操作を実行しています。"
 
 #. type: delimited block -
 #: upstream/_guides/flyway.adoc:173
@@ -327,9 +327,9 @@ msgstr "Quarkus `FlywayDataSource` 修飾子を使用して、指定されたデ
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:191
 msgid "Inject Flyway for named datasources"
-msgstr "名前の付いたデータソースにFlywayを注入する"
+msgstr "名前の付いたデータソースへの Flyway の注入"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:192
 msgid "Use the Flyway instance directly"
-msgstr "Flyway インスタンスを直接使用する"
+msgstr "Flyway インスタンスの直接使用"
