--- a/l10n/po/ja_JP/_guides/amazon-kms.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-kms.adoc.po
@@ -192,7 +192,7 @@ msgstr ""
 #: upstream/_guides/amazon-kms.adoc:79
 #, fuzzy, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/amazon-kms.adoc:81
