--- a/l10n/po/ja_JP/_guides/amazon-s3.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-s3.adoc.po
@@ -173,7 +173,7 @@ msgstr ""
 #: upstream/_guides/amazon-s3.adoc:67
 #, fuzzy, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/amazon-s3.adoc:70
