--- a/l10n/po/ja_JP/_guides/building-native-image.adoc.po
+++ b/l10n/po/ja_JP/_guides/building-native-image.adoc.po
@@ -342,7 +342,7 @@ msgstr ""
 #: upstream/_guides/building-native-image.adoc:183
 #, fuzzy, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: delimited block =
 #: upstream/_guides/building-native-image.adoc:186
