--- a/l10n/po/ja_JP/_guides/cassandra.adoc.po
+++ b/l10n/po/ja_JP/_guides/cassandra.adoc.po
@@ -79,7 +79,7 @@ msgstr "CassandraまたはDockerのインストール"
 #: upstream/_guides/cassandra.adoc:28
 #, fuzzy, no-wrap
 msgid "Architecture"
-msgstr "建築"
+msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:32
@@ -103,7 +103,7 @@ msgstr "要素はカサンドラ・データベースに格納されています
 #: upstream/_guides/cassandra.adoc:37
 #, fuzzy, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:42
