--- a/l10n/po/ja_JP/_guides/kogito.adoc.po
+++ b/l10n/po/ja_JP/_guides/kogito.adoc.po
@@ -127,7 +127,7 @@ msgstr "モデラーのインストールを避けるために、 link:https://b
 #: upstream/_guides/kogito.adoc:48
 #, fuzzy, no-wrap
 msgid "Architecture"
-msgstr "建築"
+msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/kogito.adoc:51
@@ -175,7 +175,7 @@ msgstr "ビジネスルールでは、意思決定ロジックを、宣言的な
 #: upstream/_guides/kogito.adoc:70
 #, fuzzy, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/kogito.adoc:74
