--- a/l10n/po/ja_JP/_guides/lifecycle.adoc.po
+++ b/l10n/po/ja_JP/_guides/lifecycle.adoc.po
@@ -86,7 +86,7 @@ msgstr "Apache Maven {maven-version}"
 #: upstream/_guides/lifecycle.adoc:27
 #, fuzzy, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:31
