--- a/l10n/po/ja_JP/_guides/microprofile-fault-tolerance.adoc.po
+++ b/l10n/po/ja_JP/_guides/microprofile-fault-tolerance.adoc.po
@@ -91,7 +91,7 @@ msgstr "このように実装されてはいませんが、エンドポイント
 #: upstream/_guides/microprofile-fault-tolerance.adoc:34
 #, fuzzy, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-fault-tolerance.adoc:38
