--- a/l10n/po/ja_JP/_guides/microprofile-health.adoc.po
+++ b/l10n/po/ja_JP/_guides/microprofile-health.adoc.po
@@ -72,7 +72,7 @@ msgstr "Apache Maven {maven-version}"
 #: upstream/_guides/microprofile-health.adoc:27
 #, fuzzy, no-wrap
 msgid "Architecture"
-msgstr "建築"
+msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-health.adoc:32
@@ -84,7 +84,7 @@ msgstr "このガイドでは、仕様に従って `/q/health/live` および `/
 #: upstream/_guides/microprofile-health.adoc:33
 #, fuzzy, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-health.adoc:37
