--- a/l10n/po/ja_JP/_guides/mongodb-panache.adoc.po
+++ b/l10n/po/ja_JP/_guides/mongodb-panache.adoc.po
@@ -119,7 +119,7 @@ msgstr "上で説明したのは、基本的には link:https://www.martinfowler
 #: upstream/_guides/mongodb-panache.adoc:53
 #, fuzzy, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache.adoc:57
