--- a/l10n/po/ja_JP/_guides/neo4j.adoc.po
+++ b/l10n/po/ja_JP/_guides/neo4j.adoc.po
@@ -274,7 +274,7 @@ msgstr "製品自体を開始するための他のオプションについては
 #: upstream/_guides/neo4j.adoc:111
 #, fuzzy, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/neo4j.adoc:115
