--- a/l10n/po/ja_JP/_guides/optaplanner.adoc.po
+++ b/l10n/po/ja_JP/_guides/optaplanner.adoc.po
@@ -101,7 +101,7 @@ msgstr "数学的に言えば、学校の時間割は _NP困難_ な問題です
 #: upstream/_guides/optaplanner.adoc:38
 #, fuzzy, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/optaplanner.adoc:42
