--- a/l10n/po/ja_JP/_guides/spring-web.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-web.adoc.po
@@ -73,7 +73,7 @@ msgstr "Apache Maven {maven-version}"
 #: upstream/_guides/spring-web.adoc:27
 #, fuzzy, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/spring-web.adoc:31
