--- a/l10n/po/ja_JP/_guides/validation.adoc.po
+++ b/l10n/po/ja_JP/_guides/validation.adoc.po
@@ -76,7 +76,7 @@ msgstr "Apache Maven {maven-version}"
 #: upstream/_guides/validation.adoc:24
 #, fuzzy, no-wrap
 msgid "Architecture"
-msgstr "建築"
+msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/validation.adoc:29
@@ -92,7 +92,7 @@ msgstr "image:validation-guide-architecture.png[alt=Architecture]"
 #: upstream/_guides/validation.adoc:32
 #, fuzzy, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/validation.adoc:36
