--- a/l10n/po/ja_JP/_guides/websockets.adoc.po
+++ b/l10n/po/ja_JP/_guides/websockets.adoc.po
@@ -67,7 +67,7 @@ msgstr "Apache Maven {maven-version}"
 #: upstream/_guides/websockets.adoc:24
 #, fuzzy, no-wrap
 msgid "Architecture"
-msgstr "建築"
+msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:27
@@ -85,7 +85,7 @@ msgstr "image:websocket-guide-architecture.png[alt=\"Architecture\"]"
 #: upstream/_guides/websockets.adoc:30
 #, fuzzy, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:34
