--- a/l10n/po/ja_JP/_guides/amazon-sns.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-sns.adoc.po
@@ -178,7 +178,7 @@ msgstr ""
 #: upstream/_guides/amazon-sns.adoc:75
 #, fuzzy, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/amazon-sns.adoc:78
