--- a/l10n/po/ja_JP/_guides/azure-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/azure-functions-http.adoc.po
@@ -81,7 +81,7 @@ msgstr "link:https://docs.microsoft.com/en-us/cli/azure/install-azure-cli[Azure 
 #: upstream/_guides/azure-functions-http.adoc:28
 #, fuzzy, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:33
