--- a/l10n/po/ja_JP/_guides/kafka-streams.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka-streams.adoc.po
@@ -130,7 +130,7 @@ msgstr "これらの設定を併用することで、アプリケーションを
 #: upstream/_guides/kafka-streams.adoc:811
 #, fuzzy, no-wrap
 msgid "Architecture"
-msgstr "建築"
+msgstr "アーキテクチャ"
 
 #. type: delimited block =
 #: upstream/_guides/kafka-streams.adoc:56
@@ -184,7 +184,7 @@ msgstr ""
 #: upstream/_guides/kafka-streams.adoc:71
 #, fuzzy, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: delimited block =
 #: upstream/_guides/kafka-streams.adoc:75
