--- a/l10n/po/ja_JP/_guides/opentracing.adoc.po
+++ b/l10n/po/ja_JP/_guides/opentracing.adoc.po
@@ -81,7 +81,7 @@ msgstr "このガイドでは、分散トレースを実証するための簡単
 #: upstream/_guides/opentracing.adoc:29
 #, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:33
