--- a/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
@@ -97,7 +97,7 @@ msgstr "ドッカー"
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:30
 #, fuzzy, no-wrap
 msgid "Architecture"
-msgstr "建築"
+msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:33
@@ -121,7 +121,7 @@ msgstr "このページは保護されており、認証されたユーザーの
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:38
 #, fuzzy, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:42
