--- a/l10n/po/ja_JP/_guides/spring-boot-properties.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-boot-properties.adoc.po
@@ -67,7 +67,7 @@ msgstr "Apache Maven {maven-version}"
 #: upstream/_guides/spring-boot-properties.adoc:25
 #, fuzzy, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:29
