--- a/l10n/po/ja_JP/_guides/spring-security.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-security.adoc.po
@@ -79,7 +79,7 @@ msgstr "Spring Web 拡張機能に慣れている"
 #: upstream/_guides/spring-security.adoc:28
 #, fuzzy, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/spring-security.adoc:32
