Add machine translation

--- a/l10n/po/ja_JP/_guides/scheduler.adoc.po
+++ b/l10n/po/ja_JP/_guides/scheduler.adoc.po
@@ -79,8 +79,9 @@ msgstr "このガイドでは、カウンタの現在値を取得するために
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:30
+#, fuzzy
 msgid "image:scheduling-task-architecture.png[alt=Architecture]"
-msgstr ""
+msgstr "image:scheduling-task-architecture.png[alt=Architecture]"
 
 #. type: Title ==
 #: upstream/_guides/scheduler.adoc:31
