--- a/l10n/po/ja_JP/_guides/container-image.adoc.po
+++ b/l10n/po/ja_JP/_guides/container-image.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-12 18:07+0000\n"
-"PO-Revision-Date: 2021-02-12 21:40+0900\n"
+"PO-Revision-Date: 2021-02-15 20:10+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -28,7 +28,7 @@ msgstr "Quarkus - コンテナイメージ"
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:11
 msgid "Quarkus provides extensions for building (and pushing) container images. Currently it supports:"
-msgstr "Quarkusは、コンテナイメージを構築（およびプッシュ）するためのエクステンションを提供しています。現在は以下をサポートしています："
+msgstr "Quarkus は、コンテナイメージを構築（およびプッシュ）するためのエクステンションを提供しています。現在は以下をサポートしています："
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:13
@@ -60,7 +60,7 @@ msgstr "Jib"
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:25
 msgid "The extension `quarkus-container-image-jib` is powered by https://github.com/GoogleContainerTools/jib[Jib] for performing container image builds.  The major benefit of using Jib with Quarkus is that all the dependencies (everything found under `target/lib`) are cached in a different layer than the actual application making rebuilds really fast and small (when it comes to pushing).  Another important benefit of using this extension is that it provides the ability to create a container image without having to have any dedicated client side tooling (like Docker) or running daemon processes (like the Docker daemon)  when all that is needed is the ability to push to a container image registry."
-msgstr "エクステンション `quarkus-container-image-jib` は、コンテナイメージのビルドを実行するために link:https://github.com/GoogleContainerTools/jib[Jib] を使用しています。JibをQuarkusで使用する主な利点は、すべての依存関係（ `target/lib` の下にあるすべてのもの）が実際のアプリケーションとは別のレイヤーにキャッシュされるため、リビルドが非常に高速かつ小規模に（プッシュする場合には）行えることです。このエクステンションを使用するもう一つの重要な利点は、コンテナイメージレジストリにプッシュする機能さえあれば、専用のクライアントサイドツール（Dockerのような）やデーモンプロセス（Dockerデーモンのような）を実行しなくてもコンテナイメージを作成できることです。"
+msgstr "エクステンション `quarkus-container-image-jib` は、コンテナイメージのビルドを実行するために link:https://github.com/GoogleContainerTools/jib[Jib] を使用しています。Jib をQuarkus で使用する主な利点は、すべての依存関係（ `target/lib` の下にあるすべてのもの）が実際のアプリケーションとは別のレイヤーにキャッシュされるため、リビルドが非常に高速かつ小規模に（プッシュする場合には）行えることです。このエクステンションを使用するもう一つの重要な利点は、コンテナイメージレジストリにプッシュする機能さえあれば、専用のクライアントサイドツール（Docker のような）やデーモンプロセス（Docker デーモンのような）を実行しなくてもコンテナイメージを作成できることです。"
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:27
@@ -76,7 +76,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:36
 msgid "In situations where all that is needed to build a container image and no push to a registry is necessary (essentially by having set `quarkus.container-image.build=true` and left `quarkus.container-image.push` unset - it defaults to `false`), then this extension creates a container image and registers it with the Docker daemon. This means that although Docker isn't used to build the image, it is nevertheless necessary. Also note that using this mode, the built container image *will* show up when executing `docker images`."
-msgstr "コンテナイメージを構築するために必要なのは、レジストリへのプッシュが不要な場合（基本的には `quarkus.container-image.build=true` を設定して `quarkus.container-image.push` のままにしておくことで、デフォルトは `false` になります）、このエクステンションはコンテナイメージを作成し、Docker デーモンに登録します。これは、Dockerはイメージのビルドには使われませんが、それにもかかわらず必要なものであることを意味します。また、このモードを使用すると、 `docker images` を実行するとコンテナいえーじが表示されます。"
+msgstr "コンテナイメージを構築するために必要なのは、レジストリへのプッシュが不要な場合（基本的には `quarkus.container-image.build=true` を設定して `quarkus.container-image.push` のままにしておくことで、デフォルトは `false` になります）、このエクステンションはコンテナイメージを作成し、Docker デーモンに登録します。これは、Docker はイメージのビルドには使われませんが、それにもかかわらず必要なものであることを意味します。また、このモードを使用すると、 `docker images` を実行するとコンテナいえーじが表示されます。"
 
 #. type: Title ====
 #: upstream/_guides/container-image.adoc:37
@@ -87,7 +87,7 @@ msgstr "追加ファイルの追加"
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:43
 msgid "There are cases when additional files (other than ones produced by the Quarkus build) need to be added to a container image.  To support these cases, Quarkus copies any file under `src/main/jib` into the built container image (which is essentially the same idea that the Jib Maven and Gradle plugins support).  For example, the presence of `src/main/jib/foo/bar` would result in `/foo/bar` being added into the container filesystem."
-msgstr "コンテナイメージに追加のファイル（Quarkusのビルドで作成されたもの以外）を追加する必要がある場合があります。このような場合をサポートするために、Quarkusは、 `src/main/jib` 以下のファイルをすべてビルドされたコンテナイメージにコピーします（これは、Jib MavenやGradleプラグインがサポートしているのと基本的に同じ考え方です）。例えば、 `src/main/jib/foo/bar` が存在すると、 `/foo/bar` がコンテナファイルシステムに追加されます。"
+msgstr "コンテナイメージに追加のファイル（Quarkus のビルドで作成されたもの以外）を追加する必要がある場合があります。このような場合をサポートするために、Quarkus は、 `src/main/jib` 以下のファイルをすべてビルドされたコンテナイメージにコピーします（これは、Jib Maven やGradle プラグインがサポートしているのと基本的に同じ考え方です）。例えば、 `src/main/jib/foo/bar` が存在すると、 `/foo/bar` がコンテナファイルシステムに追加されます。"
 
 #. type: Title ===
 #: upstream/_guides/container-image.adoc:45
@@ -137,7 +137,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:73
 msgid "S2I builds require creating a `BuildConfig` and two `ImageStream` resources, one for the builder image and one for the output image.  The creation of such objects is being taken care of by the Quarkus Kubernetes extension."
-msgstr "S2Iのビルドでは、 `BuildConfig` と2つの `ImageStream` リソースを作成する必要があります。このようなオブジェクトの作成は、Quarkus Kubernetesエクステンションによって行われます。"
+msgstr "S2I のビルドでは、 `BuildConfig` と2つの `ImageStream` リソースを作成する必要があります。このようなオブジェクトの作成は、Quarkus Kubernetes エクステンションによって行われます。"
 
 #. type: Title ==
 #: upstream/_guides/container-image.adoc:74
@@ -148,7 +148,7 @@ msgstr "ビルド"
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:77
 msgid "To build a container image for your project, `quarkus.container-image.build=true` needs to be set using any of the ways that Quarkus supports."
-msgstr "プロジェクト用のコンテナイメージを作成するには、Quarkusがサポートしている方法のいずれかを使用して、 `quarkus.container-image.build=true` を設定する必要があります。"
+msgstr "プロジェクト用のコンテナイメージを作成するには、Quarkus がサポートしている方法のいずれかを使用して、 `quarkus.container-image.build=true` を設定する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/container-image.adoc:81
@@ -165,7 +165,7 @@ msgstr "プッシュ"
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:86
 msgid "To push a container image for your project, `quarkus.container-image.push=true` needs to be set using any of the ways that Quarkus supports."
-msgstr "プロジェクトにコンテナイメージをプッシュするには、Quarkusがサポートしている方法のいずれかを使用して、 `quarkus.container-image.push=true` を設定する必要があります。"
+msgstr "プロジェクトにコンテナイメージをプッシュするには、Quarkus がサポートしている方法のいずれかを使用して、 `quarkus.container-image.push=true` を設定する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/container-image.adoc:90
@@ -221,17 +221,17 @@ msgstr "コンテナイメージオプション"
 #: upstream/_guides/container-image.adoc:113
 #, no-wrap
 msgid "Using CI Environments"
-msgstr "CI環境の利用"
+msgstr "CI 環境の利用"
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:117
 msgid "Various CI environments provide a ready to use container-image registry which can be combined with the container-image Quarkus extensions in order to effortlessly create and push a Quarkus application to said registry."
-msgstr "さまざまなCI環境では、コンテナイメージのQuarkusエクステンションと組み合わせることで、簡単にQuarkusアプリケーションを作成してレジストリにプッシュすることができる、すぐに使えるコンテナイメージレジストリが提供されています。"
+msgstr "さまざまな CI 環境では、コンテナイメージのQuarkus エクステンションと組み合わせることで、簡単に Quarkus アプリケーションを作成してレジストリにプッシュすることができる、すぐに使えるコンテナイメージレジストリが提供されています。"
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:121
 msgid "For example, https://gitlab.com/[GitLab] provides such a registry and in the provided CI environment, makes available the `CI_REGISTRY_IMAGE` environment variable (see GitLab's https://docs.gitlab.com/ee/ci/variables/[documentation]) for more information), which can be used in Quarkus like so:"
-msgstr "例えば、 link:https://gitlab.com/[GitLab] はこのようなレジストリを提供しており、提供されているCI環境では、環境変数 `CI_REGISTRY_IMAGE` （詳しくはGitLabの link:https://docs.gitlab.com/ee/ci/variables/[ドキュメントを] 参照）を利用できるようにしており、Quarkusではこのように利用できるようになっています。"
+msgstr "例えば、 link:https://gitlab.com/[GitLab] はこのようなレジストリを提供しており、提供されている CI 環境では、環境変数 `CI_REGISTRY_IMAGE` （詳しくは GitLab の link:https://docs.gitlab.com/ee/ci/variables/[ドキュメント] を参照）を利用できるようにしており、Quarkus ではこのように利用できるようになっています。"
 
 #. type: delimited block -
 #: upstream/_guides/container-image.adoc:125
@@ -253,7 +253,7 @@ msgstr "Jib Options"
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:132
 msgid "In addition to the generic container image options, the `container-image-jib` also provides the following options:"
-msgstr "一般的なコンテナ画像のオプションに加えて、 `container-image-jib` では以下のオプションも用意されています。"
+msgstr "一般的なコンテナイメージのオプションに加えて、 `container-image-jib` では以下のオプションも用意されています。"
 
 #. type: Title ===
 #: upstream/_guides/container-image.adoc:135
@@ -264,7 +264,7 @@ msgstr "Dockerオプション"
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:138
 msgid "In addition to the generic container image options, the `container-image-docker` also provides the following options:"
-msgstr "一般的なコンテナ画像のオプションに加えて、 `container-image-docker` では以下のオプションも用意されています。"
+msgstr "一般的なコンテナイメージのオプションに加えて、 `container-image-docker` では以下のオプションも用意されています。"
 
 #. type: Title ===
 #: upstream/_guides/container-image.adoc:141
@@ -275,4 +275,4 @@ msgstr "S2Iオプション"
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:144
 msgid "In addition to the generic container image options, the `container-image-s2i` also provides the following options:"
-msgstr "一般的なコンテナ画像のオプションに加えて、 `container-image-s2i` では以下のオプションも用意されています。"
+msgstr "一般的なコンテナイメージのオプションに加えて、 `container-image-s2i` では以下のオプションも用意されています。"
