--- a/l10n/po/ja_JP/_guides/config.adoc.po
+++ b/l10n/po/ja_JP/_guides/config.adoc.po
@@ -3,33 +3,32 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:05+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-02-15 21:42+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/config.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Configuring Your Application"
 msgstr "Quarkus - アプリケーションの設定"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:14
-#, fuzzy
 msgid "Hardcoded values in your code are a _no go_ (even if we all did it at some point ;-)).  In this guide, we learn how to configure your application."
-msgstr "コードの中にハードコードされた値を使うことは _でき_ ません (たとえ誰もがどこかの時点でそうしていたとしてもです ;-)。このガイドでは、アプリケーションを設定する方法を学びます。"
+msgstr "コードの中にハードコードされた値を使うことは _できません_ (たとえ誰もがどこかの時点でそうしていたとしてもです ;-)。このガイドでは、アプリケーションを設定する方法を学びます。"
 
 #. type: Title ==
 #: upstream/_guides/config.adoc:15
@@ -44,7 +43,6 @@ msgstr "このガイドを完成させるには、以下が必要です："
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:20
-#, fuzzy
 msgid "between 5 and 10 minutes"
 msgstr "5分から10分"
 
@@ -65,7 +63,7 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Title ==
 #: upstream/_guides/config.adoc:24
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
@@ -81,13 +79,12 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:32
-#, fuzzy
 msgid "The solution is located in the `config-quickstart` {quickstarts-tree-url}/config-quickstart[directory]."
 msgstr "ソリューションは `config-quickstart` {quickstarts-tree-url}/config-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/config.adoc:33
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the Maven project"
 msgstr "Mavenプロジェクトの作成"
 
@@ -130,31 +127,27 @@ msgstr "`native`  と `jvm`  の両方のモードに対応した `Dockerfile`  
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:53
-#, fuzzy
 msgid "the application configuration file"
 msgstr "アプリケーション設定ファイル"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:54
-#, fuzzy
 msgid "an `org.acme.config.GreetingResource` resource"
 msgstr "`org.acme.config.GreetingResource` リソース"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:55
-#, fuzzy
 msgid "an associated test"
-msgstr "関連試験"
+msgstr "関連するユニットテスト"
 
 #. type: Title ==
 #: upstream/_guides/config.adoc:56
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Create the configuration"
-msgstr "設定を作成します。"
+msgstr "設定の作成"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:61
-#, fuzzy
 msgid "By default, Quarkus reads configuration properties from <<config-reference.adoc#configuration_sources,several sources>>.  For the purpose of this guide, we will use an application configuration file located in `src/main/resources/application.properties`.  Edit the file with the following content:"
 msgstr "デフォルトでは、Quarkusは link:config-reference.html#configuration_sources[複数のソース] から設定プロパティを読み取ります。このガイドでは、 `src/main/resources/application.properties` にあるアプリケーション設定ファイルを使用します。以下の内容でファイルを編集します。"
 
@@ -169,13 +162,12 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/config.adoc:69
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Injecting configuration properties"
 msgstr "設定プロパティの注入"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:72
-#, fuzzy
 msgid "Quarkus uses https://microprofile.io/project/eclipse/microprofile-config[MicroProfile Config] annotations to inject the configuration properties in the application."
 msgstr "Quarkusでは、 link:https://microprofile.io/project/eclipse/microprofile-config[MicroProfile Config] アノテーションを使用して、アプリケーションに設定プロパティを注入しています。"
 
@@ -189,21 +181,18 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:81
-#, fuzzy
 msgid "You can use `@Inject @ConfigProperty` or just `@ConfigProperty`.  The `@Inject` annotation is not necessary for members annotated with `@ConfigProperty`.  This behavior differs from https://microprofile.io/project/eclipse/microprofile-config[MicroProfile Config]."
 msgstr "`@Inject @ConfigProperty` を使用することも、 `@ConfigProperty` だけを使用することもできます。 `@Inject` アノテーションは、 `@ConfigProperty` でアノテーションされたメンバーには必要ありません。この動作は link:https://microprofile.io/project/eclipse/microprofile-config[MicroProfile Config] とは異なります。"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:84
-#, fuzzy
 msgid "If the application attempts to inject a configuration property that is not set, an error is thrown.  So you can quickly know when your configuration is complete."
 msgstr "アプリケーションが設定されていない設定プロパティを注入しようとすると、エラーがスローされます。そのため、設定が完了したときにすぐに知ることができます。"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:86
-#, fuzzy
 msgid "Edit the `org.acme.config.GreetingResource`, and introduce the following configuration properties:"
-msgstr "`org.acme.config.GreetingResource` を編集し、以下の設定プロパティを導入します。"
+msgstr "`org.acme.config.GreetingResource` を編集し、以下の設定プロパティを導入します："
 
 #. type: delimited block -
 #: upstream/_guides/config.adoc:94
@@ -223,27 +212,23 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:99
-#, fuzzy
 msgid "If you do not provide a value for this property, the application startup fails with `javax.enterprise.inject.spi.DeploymentException: No config value of type [class java.lang.String] exists for: greeting.message`."
-msgstr "このプロパティに値を指定しないと、アプリケーションの起動は `javax.enterprise.inject.spi.DeploymentException: No config value of type [class java.lang.String] exists for: greeting.message` ."
+msgstr "このプロパティに値を指定しないと、アプリケーションの起動は `javax.enterprise.inject.spi.DeploymentException: No config value of type [class java.lang.String] exists for: greeting.message` エラーで失敗します。"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:100
-#, fuzzy
 msgid "The default value is injected if the configuration does not provide a value for `greeting.suffix`."
 msgstr "デフォルト値は、設定が `greeting.suffix` の値を提供していない場合に注入されます。"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:101
-#, fuzzy
 msgid "This property is optional - an empty `Optional` is injected if the configuration does not provide a value for `greeting.name`."
-msgstr "このプロパティはオプションです - 構成が `greeting.name` の値を提供していない場合は、空の `Optional` が注入されます。"
+msgstr "このプロパティはオプションです - 設定が `greeting.name` の値を提供していない場合は、空の `Optional` が注入されます。"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:103
-#, fuzzy
 msgid "Now, modify the `hello` method to use the injected properties:"
-msgstr "ここで、 `hello` メソッドを修正して、注入されたプロパティを使用します。"
+msgstr "ここで、 `hello` メソッドを修正して、注入されたプロパティを使用します："
 
 #. type: delimited block -
 #: upstream/_guides/config.adoc:111
@@ -258,9 +243,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:114
-#, fuzzy
 msgid "Once set, check the application with:"
-msgstr "設定したら、アプリケーションを使って確認します。"
+msgstr "設定したら、アプリケーションを使って確認します："
 
 #. type: delimited block -
 #: upstream/_guides/config.adoc:119
@@ -272,21 +256,19 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:123
-#, fuzzy
 msgid "As an alternative to injecting multiple related configuration values, you can also use the `@io.quarkus.arc.config.ConfigProperties` annotation to group these properties together.  See the <<config-reference.adoc#using_configproperties,Configuration Reference Guide>> for more information."
-msgstr "複数の関連する構成値を注入する代わりに、 `@io.quarkus.arc.config.ConfigProperties` アノテーションを使用して、これらのプロパティをまとめてグループ化することもできます。詳細については、『 link:config-reference.html#using_configproperties[構成リファレンスガイド] 』を参照してください。"
+msgstr "複数の関連する設定値を注入する代わりに、 `@io.quarkus.arc.config.ConfigProperties` アノテーションを使用して、これらのプロパティをまとめてグループ化することもできます。詳細については、『 link:config-reference.html#using_configproperties[設定リファレンスガイド] 』を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/config.adoc:124
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Update the test"
 msgstr "テストの更新"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:128
-#, fuzzy
 msgid "We also need to update the functional test to reflect the changes made to the endpoint.  Edit the `src/test/java/org/acme/config/GreetingResourceTest.java` file and change the content of the `testHelloEndpoint` method to:"
-msgstr "また、エンドポイントに加えられた変更を反映させるために、機能テストを更新する必要があります。 `src/test/java/org/acme/config/GreetingResourceTest.java` ファイルを編集し、 `testHelloEndpoint` メソッドの内容を変更します。"
+msgstr "また、エンドポイントに加えられた変更を反映させるために、機能テストを更新する必要があります。 `src/test/java/org/acme/config/GreetingResourceTest.java` ファイルを編集し、 `testHelloEndpoint` メソッドの内容を変更します："
 
 #. type: delimited block -
 #: upstream/_guides/config.adoc:132
@@ -346,39 +328,34 @@ msgstr "アプリケーションをパッケージ化して実行する"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:158
-#, fuzzy
 msgid "Run the application with: `./mvnw compile quarkus:dev`.  Open your browser to http://localhost:8080/greeting."
-msgstr "アプリケーションを実行するには、次の手順を実行します: `./mvnw compile quarkus:dev` .ブラウザを http://localhost:8080/greeting に開きます。"
+msgstr "アプリケーションを実行するには、次の手順を実行します: `./mvnw compile quarkus:dev` 。ブラウザで http://localhost:8080/greeting を開きます。"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:161
-#, fuzzy
 msgid "Changing the configuration file is immediately reflected.  You can add the `greeting.suffix`, remove the other properties, change the values, etc."
-msgstr "設定ファイルを変更するとすぐに反映されます。 `greeting.suffix` の追加、他のプロパティの削除、値の変更などができます。"
+msgstr "設定ファイルの変更はすぐに反映されます。 `greeting.suffix` の追加、他のプロパティの削除、値の変更などが可能です。"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:164
-#, fuzzy
 msgid "As usual, the application can be packaged using `./mvnw clean package` and executed using the `-runner.jar` file.  You can also generate the native executable with `./mvnw clean package -Pnative`."
-msgstr "いつものように、 `./mvnw clean package` を使ってアプリケーションをパッケージ化し、 `-runner.jar` ファイルを使って実行することができます。また、 `./mvnw clean package -Pnative` ."
+msgstr "いつものように、 `./mvnw clean package` を使ってアプリケーションをパッケージ化し、 `-runner.jar` ファイルを使って実行することができます。また、 `./mvnw clean package -Pnative` でネイティブ実行可能ファイルを生成することも出来ます。"
 
 #. type: Title ==
 #: upstream/_guides/config.adoc:165
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Programmatically access the configuration"
 msgstr "設定にプログラムでアクセス"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:169
-#, fuzzy
 msgid "You can also access the configuration programmatically.  It can be handy to achieve dynamic lookup, or retrieve configured values from classes that are neither CDI beans or JAX-RS resources."
-msgstr "プログラムで設定にアクセスすることもできます。動的なルックアップを実現したり、CDIビーンズでもJAX-RSリソースでもないクラスから設定値を取得したりするのに便利です。"
+msgstr "プログラムで設定にアクセスすることもできます。動的なルックアップを実現したり、CDI BeanでもJAX-RSリソースでもないクラスから設定値を取得したりするのに便利です。"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:171
-#, fuzzy
 msgid "You can access the configuration programmatically using `org.eclipse.microprofile.config.ConfigProvider.getConfig()` such as in:"
-msgstr "in のように `org.eclipse.microprofile.config.ConfigProvider.getConfig()` を使用してプログラムで設定にアクセスできます。"
+msgstr "以下のように `org.eclipse.microprofile.config.ConfigProvider.getConfig()` を使用してプログラムで設定にアクセスすることも出来ます："
 
 #. type: delimited block -
 #: upstream/_guides/config.adoc:176
@@ -390,21 +367,19 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/config.adoc:178
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Configuration Profiles"
-msgstr "構成プロファイル"
+msgstr "設定プロファイル"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:182
-#, fuzzy
 msgid "Quarkus supports the notion of configuration profiles.  These allow you to have multiple configuration values in the same file and select between them via a profile name."
 msgstr "Quarkusでは、設定プロファイルという概念をサポートしています。これにより、同じファイル内に複数の設定値を持つことができ、プロファイル名を使用してそれらの間で選択することができます。"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:184
-#, fuzzy
 msgid "The syntax for this is `%{profile}.config.key=value`. For example if I have the following:"
-msgstr "このための構文は `%{profile}.config.key=value` です。例えば、以下のような場合。"
+msgstr "このための構文は `%{profile}.config.key=value` です。例えば、以下のような場合："
 
 #. type: delimited block -
 #: upstream/_guides/config.adoc:189
@@ -416,61 +391,52 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:192
-#, fuzzy
 msgid "Then the Quarkus HTTP port will be 9090, unless the `dev` profile is active, in which case it will be 8181."
-msgstr "そうすると、QuarkusのHTTPポートは9090になります。 `dev` プロファイルがアクティブでない限り、その場合は8181になります。"
+msgstr "個の場合、QuarkusのHTTPポートは9090になります。 `dev` プロファイルがアクティブでない場合は8181になります。"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:194
-#, fuzzy
 msgid "See the <<config-reference.adoc#configuration_profiles,Configuration Reference Guide>> for more information about configuration profiles."
-msgstr "構成プロファイルの詳細については、『 link:config-reference.html#configuration_profiles[構成リファレンスガイド』] を参照してください。"
+msgstr "設定プロファイルの詳細については、 link:config-reference.html#configuration_profiles[設定リファレンスガイド] を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/config.adoc:195
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Configuring Quarkus"
 msgstr "Quarkusの設定"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:200
-#, fuzzy
 msgid "Quarkus itself is configured via the same mechanism as your application. Quarkus reserves the `quarkus.` namespace for its own configuration. For example to configure the HTTP server port you can set `quarkus.http.port` in `application.properties`. All the Quarkus configuration properties are link:all-config[documented and searchable]."
 msgstr "Quarkus自体は、アプリケーションと同じメカニズムで設定されます。Quarkusは、独自の設定のために `quarkus.` ネームスペースを予約します。たとえば、HTTPサーバーのポートを設定するには、 `application.properties` で `quarkus.http.port` を設定します。Quarkusの設定プロパティはすべて link:all-config[文書化されており、検索可能です] 。"
 
 #. type: delimited block =
 #: upstream/_guides/config.adoc:205
-#, fuzzy
 msgid "As mentioned above, properties prefixed with `quarkus.` are effectively reserved for configuring Quarkus itself and therefore `quarkus.` should **never** be used as prefix for application specific properties."
 msgstr "上述したように、 `quarkus.` で始まるプロパティは、Quarkus自体を設定するために実質的に予約されているため、アプリケーション固有のプロパティのプレフィックスとして `quarkus.` を使用してはいけ *ません* 。"
 
 #. type: delimited block =
 #: upstream/_guides/config.adoc:207
-#, fuzzy
 msgid "In the previous examples using `quarkus.message` instead of `greeting.message` would result in unexpected behavior."
 msgstr "前の例では、 `greeting.message` の代わりに `quarkus.message` を使用すると、予期せぬ動作をすることになります。"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:212
-#, fuzzy
 msgid "Quarkus does much of its configuration and bootstrap at build time and some configuration properties are read and used during the build.  These properties are _fixed at build time_ and it's not possible to change them at runtime.  You always need to repackage your application in order to reflect changes of such properties."
 msgstr "Quarkusは、その設定とブートストラップの多くをビルド時に行い、いくつかの設定プロパティはビルド中に読み込まれて使用されます。これらのプロパティは _ビルド時に固定され_ ており、実行時に変更することはできません。このようなプロパティの変更を反映させるには、常にアプリケーションをリパッケージする必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:214
-#, fuzzy
 msgid "The properties fixed at build time are marked with a lock icon (icon:lock[]) in the link:all-config[list of all configuration options]."
 msgstr "ビルド時に固定されたプロパティは、 link:all-config[すべての設定オプションのリスト] でロックアイコン([lock])でマークされます。"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:217
-#, fuzzy
 msgid "However, some extensions do define properties _overridable at runtime_.  A canonical example is the database URL, username and password which is only known specifically in your target environment."
-msgstr "しかし、いくつかの拡張機能は _実行時にオーバーライド可能な_ プロパティを定義しています。定型的な例としては、データベースの URL、ユーザー名とパスワードがありますが、これはターゲット環境でしか知られていません。"
+msgstr "しかし、いくつかのエクステンションは _実行時にオーバーライド可能な_ プロパティを定義しています。定型的な例としては、データベースの URL、ユーザー名とパスワードがありますが、これはターゲット環境でしか知られていません。"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:219
-#, fuzzy
 msgid "System properties"
 msgstr "システムプロパティ"
 
@@ -481,18 +447,15 @@ msgstr "環境変数"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:221
-#, fuzzy
 msgid "An environment file named `.env` placed in the current working directory"
-msgstr "`.env` という名前の環境ファイルが、現在の作業ディレクトリに置かれています。"
+msgstr "現在の作業ディレクトリに配置された `.env` という名前の環境ファイル"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:222
-#, fuzzy
 msgid "A configuration file placed in `$PWD/config/application.properties`"
-msgstr "に配置された設定ファイル `$PWD/config/application.properties`"
+msgstr "`$PWD/config/application.properties` に配置された設定ファイル"
 
 #. type: Plain text
 #: upstream/_guides/config.adoc:223
-#, fuzzy
 msgid "See the <<config-reference.adoc#configuring_quarkus,Configuration Reference Guide>> for more information."
-msgstr "詳細については、『 link:config-reference.html#configuring_quarkus[構成リファレンスガイド』] を参照してください。"
+msgstr "詳細については、 link:config-reference.html#configuring_quarkus[設定リファレンスガイド] を参照してください。"
