Add machine translation

--- a/l10n/po/ja_JP/_guides/qute.adoc.po
+++ b/l10n/po/ja_JP/_guides/qute.adoc.po
@@ -707,9 +707,9 @@ msgstr "テンプレートはシンプルです："
 
 #. type: Block title
 #: upstream/_guides/qute.adoc:413
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "report.html"
-msgstr ""
+msgstr "報告書.html"
 
 #. type: delimited block -
 #: upstream/_guides/qute.adoc:436
