--- a/l10n/po/ja_JP/_guides/cli-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/cli-tooling.adoc.po
@@ -24,44 +24,44 @@ msgstr ""
 #: upstream/_guides/cli-tooling.adoc:6
 #, no-wrap
 msgid "Building Quarkus apps with Quarkus Command Line Interface (CLI)"
-msgstr "Quarkusコマンドラインインターフェース（CLI）を使用したQuarkusアプリの構築"
+msgstr "Quarkus コマンドラインインターフェース (CLI) を使用し たQuarkus アプリの構築"
 
 #. type: Title ==
 #: upstream/_guides/cli-tooling.adoc:10
 #, no-wrap
 msgid "Installing the CLI"
-msgstr "CLIのインストール"
+msgstr "CLI のインストール"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:14
 msgid "The Quarkus CLI is provided as a native binary for Linux and macOS or as a jar-file for all operating systems."
-msgstr "Quarkus CLIは、LinuxとmacOS用のネイティブバイナリとして、またはすべてのオペレーティングシステム用のjarファイルとして提供されます。"
+msgstr "Quarkus CLI は、Linux と macOS 用のネイティブバイナリーとして、またはすべてのオペレーティングシステム用の jar ファイルとして提供されます。"
 
 #. type: Title ===
 #: upstream/_guides/cli-tooling.adoc:15
 #, no-wrap
 msgid "Native CLI"
-msgstr "ネイティブCLI"
+msgstr "ネイティブ CLI"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:18
 msgid "Download the binaries here:"
-msgstr "バイナリはこちらからダウンロードしてください："
+msgstr "バイナリーはこちらからダウンロードしてください。"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:20
 msgid "https://coming-soon[Linux Binary] (coming soon)"
-msgstr "link:https://coming-soon[Linux バイナリ] （近日公開予定）"
+msgstr "link:https://coming-soon[Linux バイナリ] (近日公開予定)"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:21
 msgid "https://coming-soon[macOS Binary] (coming soon)"
-msgstr "link:https://coming-soon[macOSバイナリ]（近日公開予定）"
+msgstr "link:https://coming-soon[macOSバイナリ]（近日公開予定)"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:26
 msgid "We recommend that you create a specific Quarkus folder, eg '~/quarkus' and move the binary there.  Then in your shell profile (for Bash shell edit '~/.bash_profile'), export the 'QUARKUS_HOME' folder and add that to your 'PATH':"
-msgstr "特定のQuarkusフォルダ、例えば'~/quarkus'を作成し、そこにバイナリを移動することをお勧めします。次に、シェルプロファイル（Bashシェルの場合は'~/.bash_profile'を編集）で、'QUARKUS_HOME'フォルダをエクスポートして'PATH'に追加します："
+msgstr "特定の Quarkus フォルダー、例えば '~/quarkus' を作成し、そこにバイナリを移動することをお勧めします。次に、シェルプロファイル (Bash シェルの場合は'~/.bash_profile' を編集) で、'QUARKUS_HOME' フォルダーをエクスポートして 'PATH' に追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/cli-tooling.adoc:31
@@ -70,28 +70,30 @@ msgid ""
 "export QUARKUS_HOME=/path/to/quarkus-cli\n"
 "export PATH=\"$PATH:$QUARKUS_HOME\"\n"
 msgstr ""
+"export QUARKUS_HOME=/path/to/quarkus-cli\n"
+"export PATH=\"$PATH:$QUARKUS_HOME\"\n"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:34
 msgid "Reload your terminal or do:"
-msgstr "端末をリロードするか、以下を実行します："
+msgstr "端末をリロードするか、以下を実行します。"
 
 #. type: delimited block -
 #: upstream/_guides/cli-tooling.adoc:38
 #, no-wrap
 msgid "source ~/.bash_profile\n"
-msgstr ""
+msgstr "source ~/.bash_profile\n"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:41
 msgid "Now you can run the Quarkus CLI:"
-msgstr "これでQuarkus CLIを実行できるようになりました："
+msgstr "これで Quarkus CLI を実行できるようになりました。"
 
 #. type: delimited block -
 #: upstream/_guides/cli-tooling.adoc:45
 #, no-wrap
 msgid "$ quarkus --help\n"
-msgstr ""
+msgstr "$ quarkus --help\n"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:48
@@ -102,12 +104,12 @@ msgstr "これにより、利用可能なすべてのコマンドのヘルプ情
 #: upstream/_guides/cli-tooling.adoc:52
 #, no-wrap
 msgid "$ quarkus -i\n"
-msgstr ""
+msgstr "$ quarkus -i\n"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:55
 msgid "This will start the Quarkus CLI in interactive mode."
-msgstr "これにより、対話型モードでQuarkus CLIが起動します。"
+msgstr "これにより、対話型モードで Quarkus CLI が起動します。"
 
 #. type: Title ===
 #: upstream/_guides/cli-tooling.adoc:56
@@ -118,33 +120,33 @@ msgstr "Jar CLI"
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:59
 msgid "Download the jar-file here:"
-msgstr "jarファイルはこちらからダウンロードしてください："
+msgstr "jar ァイルはこちらからダウンロードしてください。"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:60
 msgid "https://coming-soon[jar-file] (coming soon)"
-msgstr "link:https://coming-soon[jar-file]（近日公開）"
+msgstr "link:https://coming-soon[jar-file](近日公開)"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:63
 msgid "As with the native CLI we recommend that you copy the binary to a specific folder, eg '~/quarkus'.  The jar file requires Java 8 or newer to run. To start the CLI:"
-msgstr "ネイティブCLIと同様に、バイナリを特定のフォルダ、例えば'~/quarkus'にコピーすることをお勧めします。jarファイルを実行するにはJava 8以降が必要です。CLIを起動するには以下を実行してください："
+msgstr "ネイティブ CLI と同様に、バイナリーを特定のフォルダー (例: '~/quarkus') にコピーすることをお勧めします。jar ファイルを実行するには Java 8 以降が必要です。CLI を起動するには以下を実行してください。"
 
 #. type: delimited block -
 #: upstream/_guides/cli-tooling.adoc:67
 #, no-wrap
 msgid "$ java -jar quarkus-cli.jar\n"
-msgstr ""
+msgstr "$ java -jar quarkus-cli.jar\n"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:70
 msgid "The jar file CLI accepts all the same options and commands as the native binary."
-msgstr "jarファイルのCLIは、ネイティブのバイナリと同じオプションとコマンドをすべて受け入れます。"
+msgstr "jar ファイルの CLI は、ネイティブのバイナリーと同じオプションとコマンドをすべて受け入れます。"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:72
 msgid "Note: In the examples below switch out 'quarkus' with 'java -jar quarkus-cli.jar'."
-msgstr "注意: 以下の例では、'quarkus'を'java -jar quarkus-cli.jar'で置き換えています。"
+msgstr "注意: 以下の例では、'quarkus' を 'java -jar quarkus-cli.jar' で置き換えています。"
 
 #. type: Title ==
 #: upstream/_guides/cli-tooling.adoc:75
@@ -155,18 +157,18 @@ msgstr "新規プロジェクトの作成"
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:78
 msgid "To create a new project we use the create-project command:"
-msgstr "新しいプロジェクトを作成するには、create-projectコマンドを使用します。"
+msgstr "新しいプロジェクトを作成するには、create-project コマンドを使用します。"
 
 #. type: delimited block -
 #: upstream/_guides/cli-tooling.adoc:82
 #, no-wrap
 msgid "$ quarkus create-project hello-world\n"
-msgstr ""
+msgstr "$ quarkus create-project hello-world\n"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:87
 msgid "This will create a folder called 'hello-world' in your current working directory using default groupId, artifactId and version values (groupId='org.acme', artifactId='quarkus' and version='1.0.0-SNAPSHOT')."
-msgstr "これにより、デフォルトの groupId、artifactId、および version の値 (groupId='org.acme', artifactId='quarkus', version='1.0.0-SNAPSHOT') を使用して、現在の作業ディレクトリに 'hello-world' という名前のフォルダが作成されます。"
+msgstr "これにより、デフォルトの groupId、artifactId、および version の値 (groupId='org.acme', artifactId='quarkus', version='1.0.0-SNAPSHOT') を使用して、現在の作業ディレクトリーに 'hello-world' という名前のフォルダーが作成されます。"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:90
@@ -177,7 +179,7 @@ msgstr "groupId、artifactId、および version の値を指定するには、'
 #: upstream/_guides/cli-tooling.adoc:94
 #, no-wrap
 msgid "$ quarkus create-project --groupid=com.foo --artifactId=bar --version=1.0  hello-world\n"
-msgstr ""
+msgstr "$ quarkus create-project --groupid=com.foo --artifactId=bar --version=1.0  hello-world\n"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:98
@@ -188,7 +190,7 @@ msgstr "利用可能なすべてのオプションを表示するには、ヘル
 #: upstream/_guides/cli-tooling.adoc:102
 #, no-wrap
 msgid "$ quarkus create-project --help\n"
-msgstr ""
+msgstr "$ quarkus create-project --help\n"
 
 #. type: Title ==
 #: upstream/_guides/cli-tooling.adoc:104
@@ -199,24 +201,24 @@ msgstr "エクステンションへの対応"
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:107
 msgid "The Quarkus CLI can obtain a list of the available extensions with:"
-msgstr "Quarkus CLIでは、利用可能なエクステンションのリストを取得することができます。"
+msgstr "Quarkus CLI では、利用可能なエクステンションのリストを取得することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/cli-tooling.adoc:111
 #, no-wrap
 msgid "$ quarkus list-extensions\n"
-msgstr ""
+msgstr "$ quarkus list-extensions\n"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:114
 msgid "To more easily get an overview and only display the extension names:"
-msgstr "より簡単に概要を取得し、エクステンション名のみを表示するようにする場合は以下の通りです："
+msgstr "より簡単に概要を取得し、エクステンション名のみを表示する場合は、以下を実行します。"
 
 #. type: delimited block -
 #: upstream/_guides/cli-tooling.adoc:118
 #, no-wrap
 msgid "$ quarkus list-extensions -n\n"
-msgstr ""
+msgstr "$ quarkus list-extensions -n\n"
 
 #. type: Title ==
 #: upstream/_guides/cli-tooling.adoc:121
@@ -227,18 +229,18 @@ msgstr "エクステンションの追加"
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:125
 msgid "The Quarkus CLI can add Quarkus extensions to your project with the 'add-extension' command:"
-msgstr "Quarkus CLIでは、'add-extension'コマンドを使用して、Quarkusのエクステンションをプロジェクトに追加することができます："
+msgstr "Quarkus CLI では、'add-extension' コマンドを使用して、Quarkus のエクステンションをプロジェクトに追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/cli-tooling.adoc:129
 #, no-wrap
 msgid "$ quarkus add-extension --extension=hibernate-validator /path/to/my/project\n"
-msgstr ""
+msgstr "$ quarkus add-extension --extension=hibernate-validator /path/to/my/project\n"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:133
 msgid "The argument path either needs to be the base folder for the project or a direct path to the build file."
-msgstr "引数のパスは、プロジェクトのベースフォルダかビルドファイルへの直接パスである必要があります。"
+msgstr "引数のパスは、プロジェクトのベースフォルダーかビルドファイルへの直接パスである必要があります。"
 
 #. type: Title ==
 #: upstream/_guides/cli-tooling.adoc:134
@@ -249,15 +251,15 @@ msgstr "開発モード"
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:137
 msgid "To start dev mode from the Quarkus CLI do:"
-msgstr "Quarkus CLIからdevモードを起動するには、以下のようにします："
+msgstr "Quarkus CLI から dev モードを起動するには、以下を実行します。"
 
 #. type: delimited block -
 #: upstream/_guides/cli-tooling.adoc:141
 #, no-wrap
 msgid "$ quarkus dev /path/to/my/project\n"
-msgstr ""
+msgstr "$ quarkus dev /path/to/my/project\n"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:145
 msgid "As with 'add-extension' the argument path needs to be the base folder for the project or a direct path to the build file."
-msgstr "add-extension' と同様に、引数のパスはプロジェクトのベースフォルダかビルドファイルへの直接パスでなければなりません。"
+msgstr "add-extension' と同様、引数のパスは、プロジェクトのベースフォルダーまたはビルドファイルへの直接パスである必要があります。"
