--- a/l10n/po/ja_JP/_guides/getting-started-testing.adoc.po
+++ b/l10n/po/ja_JP/_guides/getting-started-testing.adoc.po
@@ -491,6 +491,12 @@ msgid ""
 "    }\n"
 "}\n"
 msgstr ""
+"    @GET\n"
+"    @Produces(MediaType.TEXT_PLAIN)\n"
+"    public String hello() {\n"
+"        return \"hello\";\n"
+"    }\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-testing.adoc:264
