--- a/l10n/po/ja_JP/_guides/microprofile-fault-tolerance.adoc.po
+++ b/l10n/po/ja_JP/_guides/microprofile-fault-tolerance.adoc.po
@@ -415,7 +415,7 @@ msgstr "アプリケーションが動作することを確認してみません
 #: upstream/_guides/microprofile-fault-tolerance.adoc:207
 #, no-wrap
 msgid "./mvnw compile quarkus:dev\n"
-msgstr ""
+msgstr "./mvnw compile quarkus:dev\n"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-fault-tolerance.adoc:212
