--- a/l10n/po/ja_JP/_guides/microprofile-graphql.adoc.po
+++ b/l10n/po/ja_JP/_guides/microprofile-graphql.adoc.po
@@ -763,7 +763,7 @@ msgstr "quarkusアプリを起動します。"
 #: upstream/_guides/microprofile-graphql.adoc:357
 #, no-wrap
 msgid "./mvnw compile quarkus:dev\n"
-msgstr ""
+msgstr "./mvnw compile quarkus:dev\n"
 
 #. type: Title ==
 #: upstream/_guides/microprofile-graphql.adoc:359
