--- a/l10n/po/ja_JP/_guides/openapi-swaggerui.adoc.po
+++ b/l10n/po/ja_JP/_guides/openapi-swaggerui.adoc.po
@@ -391,7 +391,7 @@ msgstr "これで、アプリケーションを実行する準備が整いまし
 #: upstream/_guides/openapi-swaggerui.adoc:483
 #, no-wrap
 msgid "./mvnw compile quarkus:dev\n"
-msgstr ""
+msgstr "./mvnw compile quarkus:dev\n"
 
 #. type: Plain text
 #: upstream/_guides/openapi-swaggerui.adoc:204
