--- a/l10n/po/ja_JP/_guides/opentracing.adoc.po
+++ b/l10n/po/ja_JP/_guides/opentracing.adoc.po
@@ -300,7 +300,7 @@ msgstr "これでアプリケーションを実行する準備が整いました
 #: upstream/_guides/opentracing.adoc:140
 #, no-wrap
 msgid "./mvnw compile quarkus:dev\n"
-msgstr ""
+msgstr "./mvnw compile quarkus:dev\n"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:143
