--- a/l10n/po/ja_JP/_guides/validation.adoc.po
+++ b/l10n/po/ja_JP/_guides/validation.adoc.po
@@ -510,7 +510,7 @@ msgstr "では、実際にアプリケーションを見てみましょう。以
 #: upstream/_guides/validation.adoc:263
 #, no-wrap
 msgid "./mvnw compile quarkus:dev\n"
-msgstr ""
+msgstr "./mvnw compile quarkus:dev\n"
 
 #. type: Plain text
 #: upstream/_guides/validation.adoc:266
