--- a/l10n/po/ja_JP/_guides/vertx.adoc.po
+++ b/l10n/po/ja_JP/_guides/vertx.adoc.po
@@ -517,7 +517,7 @@ msgstr ""
 #: upstream/_guides/vertx.adoc:243 upstream/_guides/vertx.adoc:564
 #, no-wrap
 msgid "./mvnw compile quarkus:dev\n"
-msgstr ""
+msgstr "./mvnw compile quarkus:dev\n"
 
 #. type: Plain text
 #: upstream/_guides/vertx.adoc:246
