--- a/l10n/po/ja_JP/_guides/websockets.adoc.po
+++ b/l10n/po/ja_JP/_guides/websockets.adoc.po
@@ -318,7 +318,7 @@ msgstr "では、実際にアプリケーションを見てみましょう。以
 #: upstream/_guides/websockets.adoc:152
 #, no-wrap
 msgid "./mvnw compile quarkus:dev\n"
-msgstr ""
+msgstr "./mvnw compile quarkus:dev\n"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:155
