--- a/l10n/po/ja_JP/_guides/gcp-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/gcp-functions-http.adoc.po
@@ -199,6 +199,10 @@ msgid ""
 "import javax.ws.rs.Produces;\n"
 "import javax.ws.rs.core.MediaType;\n"
 msgstr ""
+"import javax.ws.rs.GET;\n"
+"import javax.ws.rs.Path;\n"
+"import javax.ws.rs.Produces;\n"
+"import javax.ws.rs.core.MediaType;\n"
 
 #. type: delimited block -
 #: upstream/_guides/gcp-functions-http.adoc:91
@@ -219,6 +223,12 @@ msgid ""
 "    }\n"
 "}\n"
 msgstr ""
+"    @GET\n"
+"    @Produces(MediaType.TEXT_PLAIN)\n"
+"    public String hello() {\n"
+"        return \"hello\";\n"
+"    }\n"
+"}\n"
 
 #. type: Title ===
 #: upstream/_guides/gcp-functions-http.adoc:100
