--- a/l10n/po/ja_JP/_guides/getting-started.adoc.po
+++ b/l10n/po/ja_JP/_guides/getting-started.adoc.po
@@ -335,6 +335,10 @@ msgid ""
 "import javax.ws.rs.Produces;\n"
 "import javax.ws.rs.core.MediaType;\n"
 msgstr ""
+"import javax.ws.rs.GET;\n"
+"import javax.ws.rs.Path;\n"
+"import javax.ws.rs.Produces;\n"
+"import javax.ws.rs.core.MediaType;\n"
 
 #. type: delimited block -
 #: upstream/_guides/getting-started.adoc:177
@@ -357,6 +361,12 @@ msgid ""
 "    }\n"
 "}\n"
 msgstr ""
+"    @GET\n"
+"    @Produces(MediaType.TEXT_PLAIN)\n"
+"    public String hello() {\n"
+"        return \"hello\";\n"
+"    }\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_guides/getting-started.adoc:187
