--- a/l10n/po/ja_JP/_guides/logging.adoc.po
+++ b/l10n/po/ja_JP/_guides/logging.adoc.po
@@ -99,6 +99,10 @@ msgid ""
 "import javax.ws.rs.Produces;\n"
 "import javax.ws.rs.core.MediaType;\n"
 msgstr ""
+"import javax.ws.rs.GET;\n"
+"import javax.ws.rs.Path;\n"
+"import javax.ws.rs.Produces;\n"
+"import javax.ws.rs.core.MediaType;\n"
 
 #. type: delimited block -
 #: upstream/_guides/logging.adoc:40
