--- a/l10n/po/ja_JP/_guides/neo4j.adoc.po
+++ b/l10n/po/ja_JP/_guides/neo4j.adoc.po
@@ -571,7 +571,7 @@ msgstr "ここで、 `dev` モードでQuarkusを起動します。"
 #: upstream/_guides/neo4j.adoc:249
 #, no-wrap
 msgid "./mvnw compile quarkus:dev\n"
-msgstr ""
+msgstr "./mvnw compile quarkus:dev\n"
 
 #. type: Plain text
 #: upstream/_guides/neo4j.adoc:252
