--- a/l10n/po/ja_JP/_guides/quartz.adoc.po
+++ b/l10n/po/ja_JP/_guides/quartz.adoc.po
@@ -565,6 +565,10 @@ msgid ""
 "import javax.ws.rs.Produces;\n"
 "import javax.ws.rs.core.MediaType;\n"
 msgstr ""
+"import javax.ws.rs.GET;\n"
+"import javax.ws.rs.Path;\n"
+"import javax.ws.rs.Produces;\n"
+"import javax.ws.rs.core.MediaType;\n"
 
 #. type: delimited block -
 #: upstream/_guides/quartz.adoc:254
