--- a/l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po
@@ -527,7 +527,7 @@ msgstr "ここで、 `dev` モードでQuarkusを起動します。"
 #: upstream/_guides/reactive-sql-clients.adoc:275
 #, no-wrap
 msgid "./mvnw compile quarkus:dev\n"
-msgstr ""
+msgstr "./mvnw compile quarkus:dev\n"
 
 #. type: Plain text
 #: upstream/_guides/reactive-sql-clients.adoc:278
