--- a/l10n/po/ja_JP/_guides/spring-boot-properties.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-boot-properties.adoc.po
@@ -179,6 +179,10 @@ msgid ""
 "import javax.ws.rs.Produces;\n"
 "import javax.ws.rs.core.MediaType;\n"
 msgstr ""
+"import javax.ws.rs.GET;\n"
+"import javax.ws.rs.Path;\n"
+"import javax.ws.rs.Produces;\n"
+"import javax.ws.rs.core.MediaType;\n"
 
 #. type: delimited block -
 #: upstream/_guides/spring-boot-properties.adoc:85
@@ -199,6 +203,12 @@ msgid ""
 "    }\n"
 "}\n"
 msgstr ""
+"    @GET\n"
+"    @Produces(MediaType.TEXT_PLAIN)\n"
+"    public String hello() {\n"
+"        return \"hello\";\n"
+"    }\n"
+"}\n"
 
 #. type: Title ==
 #: upstream/_guides/spring-boot-properties.adoc:94
